[metadata]
name = TracNav
author = Bernhard Haumacher
author_email = haui@haumacher.de
maintainer = Thomas Moschny
maintainer_email = thomas.moschny@gmx.de
url = https://svn.ipd.kit.edu/trac/javaparty/wiki/TracNav
download_url = https://svn.ipd.kit.edu/trac/javaparty/wiki/TracNav/DownloadAndInstall
description = The Navigation Bar for Trac
keywords = trac, toc, plugin
license = GPLv2+
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Framework :: Trac
  Intended Audience :: System Administrators
  License :: OSI Approved :: GNU General Public License (GPL)
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = tracnav
include_package_data = True

[options.entry_points]
trac.plugins =
  TracNav = tracnav.tracnav

[flake8]
max-line-length = 88
extend-ignore = E203
